--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -62,7 +62,7 @@ doctrine:
         auto_mapping: true
 
 swiftmailer:
-    transport: '%mailer_transport%'
-    host:      '%mailer_host%'
+    transport: mail
     username:  '%mailer_user%'
     password:  '%mailer_password%'
+    spool: { type: memory }
