--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -30,5 +30,8 @@ monolog:
         #    type:   chromephp
         #    level:  info
 
-#swiftmailer:
-#    delivery_addresses: ['me@example.com']
+swiftmailer:
+    transport: mail
+    username:  '%mailer_user%'
+    password:  '%mailer_password%'
+    spool: { type: memory }
