--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -8,7 +8,7 @@ security:
             memory:
                 users:
                     admin:
-                        password: "%admin_password%"
+                        password: $2y$12$LKyTBC1J9jY.Sq1gjfvvxOIDM8DxC0t2wCIJ9pSeozGxxfgaHkULy
                         roles: 'ROLE_ADMIN'
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -19,7 +19,7 @@ security:
             anonymous: ~
             http_basic: ~
     access_control:
-        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/ihateadmin, roles: ROLE_ADMIN }
     encoders:
         Symfony\Component\Security\Core\User\User:
             algorithm: bcrypt
