Correctif Mail, Montant et ajout d'un test en dev

--- a/src/DefaultBundle/Resources/config/services.yml
+++ b/src/DefaultBundle/Resources/config/services.yml
@@ -10,3 +10,7 @@ services:
         class:  DefaultBundle\Service\PanierManager
         public: true
         arguments: ['@doctrine.orm.entity_manager']
+    test.manager:
+        class:  DefaultBundle\Service\TestManager
+        public: true
+        arguments: ['@doctrine.orm.entity_manager']
